syntax = "proto3";

                 package gameEventNpcFlag;
service GameEventNpcFlagService {
 rpc createGameEventNpcFlag (GameEventNpcFlagCreateInput) returns (GameEventNpcFlag) {}
rpc gameEventNpcFlags (findManyParams) returns (stream GameEventNpcFlag) {}
rpc gameEventNpcFlag (GameEventNpcFlagWhereUniqueInput) returns (GameEventNpcFlag) {}
rpc updateGameEventNpcFlag (GameEventNpcFlagUpdateInput) returns (GameEventNpcFlag) {}
rpc deleteGameEventNpcFlag (GameEventNpcFlagWhereUniqueInput) returns (GameEventNpcFlag) {} 
 }
message GameEventNpcFlagCreateInput {
string createdAt = 1;
int32 eventEntry = 2;
int32 guid = 3;
string id = 4;
int32 npcflag = 5;
string updatedAt = 6;
};
message GameEventNpcFlag {
string createdAt = 1;
int32 eventEntry = 2;
int32 guid = 3;
string id = 4;
int32 npcflag = 5;
string updatedAt = 6;
};
message GameEventNpcFlagWhereUniqueInput {
string createdAt = 1;
int32 eventEntry = 2;
int32 guid = 3;
string id = 4;
int32 npcflag = 5;
string updatedAt = 6;
};
message GameEventNpcFlagUpdateInput {
string createdAt = 1;
int32 eventEntry = 2;
int32 guid = 3;
string id = 4;
int32 npcflag = 5;
string updatedAt = 6;
};
message findManyParams {

};